redesign of site and adding of logo

--- a/site/index.html
+++ b/site/index.html
@@ -5,21 +5,10 @@
 	
 </head>	
 	<body>
-	
-	<div class="ganzeSeite">
-		<div class="logo">
-			<p id="akronym">KKK</p>
-			<p id="akronym">KalenderKampfKruppe</p>
+	<div id="logo">
+			<img src="source/logo_blau_2133x626.png">
 		</div>
-		
-		
-		
-		
-		<div class="auswahl">
-			<p>Das ist ein Test.</p>
-		</div>
-		
-	</div>
+	<div id="selektor"></div>
 	
 	
 	
