s1icke CSS h4cks

--- a/site/index.html
+++ b/site/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE >
 <html>
-<head><link rel="stylesheet" type="text/css" href="style.css">
-<title>Kalender EMI></title>	
-	
-</head>	
+	<head>
+		<link href="//fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
+
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Kalender EMI></title>
+
+	</head>
 	<body>
-	<div id="logo">
+		<div id="logo">
 			<img src="source/logo_blau_2133x626.png">
 		</div>
-	<div id="selektor"></div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
+		<div id="selektor">
+			<div id="monat"><p>MONATE</p></div>
+		</div>
+
 	</body>
-	
-	
-	
-	
-	
+
 </html>
