javascript implementiert verbesserungen in css

--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<link href="//fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
-
+		<script type="text/javascript" src="tschawa.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>Kalender EMI></title>
+		<title>DDkalender</title>
 
 	</head>
 	<body>
@@ -12,7 +12,10 @@
 			<img src="source/logo_blau_2133x626.png">
 		</div>
 		<div id="selektor">
-			<div id="monat"><p>MONATE</p></div>
+			<div id="monat" onclick="activated()"><p>MONATE</p></div>
+			<div id="wochen"><p>TAGE</p></div>
+			<div id="uebersicht"><p>&Uuml;BERSICHT</p></div>
+			
 		</div>
 
 	</body>
