optimized javascript, mouseovers and onclicks now working correctly

--- a/site/index.html
+++ b/site/index.html
@@ -12,9 +12,9 @@
 			<img src="source/logo_blau_2133x626.png">
 		</div>
 		<div id="selektor">
-			<div id="monat" onclick="activated()"><p>MONATE</p></div>
-			<div id="wochen"><p>TAGE</p></div>
-			<div id="uebersicht"><p>&Uuml;BERSICHT</p></div>
+			<div id="monat" onclick="activatedMonat()" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbungx(this)"><p>MONATE</p></div>
+			<div id="wochen" onclick="activatedWoche()" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbungy(this)"><p>TAGE</p></div>
+			<div id="uebersicht" onclick="activatedUebersicht()" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbungz(this)"><p>&Uuml;BERSICHT</p></div>
 			
 		</div>
 
