container for certain views added

--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,7 @@
 			<div id="uebersicht" onclick="activatedUebersicht()" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbungz(this)"><p>&Uuml;BERSICHT</p></div>
 			
 		</div>
-
+<div id="ansichtsContainer"><p>test</p></div>
 	</body>
 
 </html>
