including view of months, optimizing CSS

--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,10 @@
 			<div id="uebersicht" onclick="activatedUebersicht()" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbungz(this)"><p>&Uuml;BERSICHT</p></div>
 			
 		</div>
-<div id="ansichtsContainer"><p>test</p></div>
+		<div id="ansichtsContainer">
+			<iframe src="Monat.html" width="100%" height="100%"></iframe>
+		</div>
+
 	</body>
 
 </html>
