--- a/site/Monat.html
+++ b/site/Monat.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link href="//fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
+<link href="//fonts.googleapis.com/css?family=Gentium+Basic:400italic,400,700italic,700" rel="stylesheet" type="text/css">
+
 </head>
-<body>
+<body >
 	<table width="100%" height="100%" border="1">
 		<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
 		<tr><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td></tr>
