--- a/site/Monat.html
+++ b/site/Monat.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-<link href="//fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
-<link href="//fonts.googleapis.com/css?family=Gentium+Basic:400italic,400,700italic,700" rel="stylesheet" type="text/css">
+<link href="
+https://fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
+<link href="
+https://fonts.googleapis.com/css?family=Gentium+Basic:400italic,400,700italic,700" rel="stylesheet" type="text/css">
+
 
 </head>
 <body >
