--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE >
 <html>
 	<head>
-		<link href="//fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="tschawa.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>DDkalender</title>
