--- a/site/index.html
+++ b/site/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">		
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>DDkalender</title>
+		<title>DDkalender</title>		
+		
 
 	</head>
-	<body>
+	<body onload="activateSelektor(objekte[0])">
 		<div id="logo">
 			<img src="source/logo_blau_2133x626.png">
 		</div>
