jetzt mit schnee

--- a/site/index.html
+++ b/site/index.html
@@ -3,11 +3,14 @@
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">		
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<script type="text/javascript" src="tschawa.js"></script>
+		<script type="text/javascript" src="./schnee.js"></script> 
+
 		<title>DDkalender</title>		
 		
 
 	</head>
-	<body onload="activateSelektor(objekte[0])">
+	<body onload="activateSelektor(objekte[0])" id="winter">
 		<div id="logo">
 			<img src="source/logo_blau_2133x626.png">
 		</div>
