--- a/site/uebersicht.html
+++ b/site/uebersicht.html
@@ -7,13 +7,12 @@ https://fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="s
 <link href="
 https://fonts.googleapis.com/css?family=Gentium+Basic:400italic,400,700italic,700" rel="stylesheet" type="text/css">
 
-
 </head>
 <body >
-	<table width="100%" height="100%" border="1">
+<!--	<table width="100%" height="100%" border="1">
 		<tr><td>Heute</td></tr>
 		
-	</table>
+</table> -->
 	<img src="source/CSS.gif" />
 </body>
 </html>
