--- a/site/indexnew.html
+++ b/site/indexnew.html
@@ -11,6 +11,7 @@
 		<div id="logo">	
 			<img src="source/logo_blau_2133x626.png">
 		</div>
+		<div id="suchfeld"><textarea ></textarea></div>
 		<div id="ansichtsContainer">				
 			<tr id="navleiste">
 				<div style="float:left; width:150px" onclick="weiter(0)"> < </div>
