--- a/site/indexnew.html
+++ b/site/indexnew.html
@@ -13,7 +13,7 @@
 		</div>
 
 		<div id="tfheader">
-			<form id="tfnewsearch" method="get" action="http://www.google.com">
+			<form id="tfnewsearch" >
 				<input type="text" class="tftextinput" name="q" size="21" maxlength="120">
 				<input type="submit" value="search" class="tfbutton">
 			</form>
