--- a/site/index.html
+++ b/site/index.html
@@ -3,28 +3,32 @@
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">		
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<script type="text/javascript" src="tschawa.js"></script>
-		 <script type="text/javascript" src="/source/taffy.js"></script>
+		<script type="text/javascript" src="facebook.js"></script>
 		
-
-		<title>DDkalender</title>		
-		
-
+		<title>DDkalender</title>
 	</head>
-	<body onload="activateSelektor(objekte[0])" id="winter">
-		<div id="logo">
+	<body onload="start()">
+		<div id="logo">	
 			<img src="source/logo_blau_2133x626.png">
 		</div>
-		<div id="selektor">
-			<div id="monat" class="selektor_normal" onclick="activateSelektor(this)" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbung(this)"><p>MONAT</p></div>			
-			<div id="wochen" class="selektor_normal" onclick="activateSelektor(this)" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbung(this)"><p>TAGE</p></div>
-			<div id="uebersicht" class="selektor_normal" onclick="activateSelektor(this)" onmouseover="sickeFaerbung(this)" onmouseout="sickeEntfaerbung(this)"><p>&Uuml;BERSICHT</p></div>
-			
-		</div>
-		<div id="ansichtsContainer">
-			<iframe  id="ViewPane" src="monat.html" width="100%" height="100%"></iframe>
-		</div>
-	<script type="text/javascript" src="tschawa.js"></script>
+		<div id="suchfeld"><textarea ></textarea></div>
+		<div id="ansichtsContainer">				
+			<tr id="navleiste">
+				<div style="float:left; width:150px" onclick="weiter(0)"> < </div>
+				<a id="monatsanzeige">start</a>
+				<div style="float:right; width:150px" onclick="weiter(1)">></div>
+			</tr>
+			<tr>
+				<table id="monate"  width ="100%"  height="100%">
+					<tr><td>Mon</td><td>Die</td><td>Mit</td><td>Don</td><td>Fre</td><td>Sam</td><td>Son</td></tr>	
+					<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
+					<tr><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td><td>14</td></tr>
+					<tr><td>15</td><td>16</td><td>17</td><td>18</td><td>19</td><td>20</td><td>21</td></tr>
+					<tr><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td><td>28</td></tr>
+					<tr><td>29</td><td>30</td><td>31</td><td>-</td><td>-</td><td>-</td><td>-</td></tr>
+					<tr><td>29</td><td>30</td><td>31</td><td>-</td><td>-</td><td>-</td><td>-</td></tr>	
+				</table>		
+			</tr>				
+		</div>	
 	</body>
-
 </html>
