--- a/site/index.html
+++ b/site/index.html
@@ -21,15 +21,15 @@
         </div>
         <div id="ansichtsContainer">
             <div style="float:left; width:150px" onclick="datumsaenderungFeil(0)">
-                <
+               &laquo;
             </div>
             <a id="monatsanzeige" >start</a>
             <div style="float:right; width:150px" onclick="datumsaenderungFeil(1)">
-                >
+               &raquo;
             </div>
             <table id="monate"  width ="100%"  height="100%" >
                 <tr>
-                    <td onmouseover="alert('Testen')">Mon</td><td>Die</td><td>Mit</td><td>Don</td><td>Fre</td><td>Sam</td><td>Son</td>
+                    <td>Mon</td><td>Die</td><td>Mit</td><td>Don</td><td>Fre</td><td>Sam</td><td>Son</td>
                 </tr>
                 <tr>
                     <td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td>
