--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
     <body onload="onloadFunktion()">
         <script type="text/javascript" src="wz_tooltip.js"></script>
         <div id="logo">
-            <img src="source/logo_blau_2133x626.png" alt="Logo">
+            <img src="source/logo.png" alt="Logo">
         </div>
 
         <div id="tfheader">
