--- a/site/index.html
+++ b/site/index.html
@@ -9,10 +9,11 @@
 
     <body onload="onloadFunktion()">
         <script type="text/javascript" src="wz_tooltip.js"></script>
-        <div id="logo">
+        <div id="haupt">
+		<div id="logo">
             <img src="source/logo.png" alt="Logo">
         </div>
-
+		<div id="search">
         <div id="tfheader">
             <form id="tfnewsearch" >
                 <input type="text" class="tftextinput" id="q" size="21" maxlength="120">
@@ -20,6 +21,8 @@
             </form>
             <div class="tfclear"></div>
         </div>
+		</div>
+		</div>
         <div id="ansichtsContainer">
             <div style="float:left; width:150px" onclick="datumsaenderungFeil(0)">
 
@@ -53,6 +56,7 @@
                     <td>29</td><td>30</td><td>31</td><td>-</td><td>-</td><td>-</td><td>-</td>
                 </tr>
             </table>
-        </div>
+        
+		</div>
     </body>
 </html>
