--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:300italic,300,400italic,400" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="facebook.js"></script>
+        <script type="text/javascript" src="source/Komoedie.jpg"></script>
         <title>DDkalender</title>
     </head>
 
