--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script type="text/javascript" src="facebook.js"></script>
 		<script type="text/javascript" src="source/Komoedie.jpg"></script>
-		<title>DDkalender</title>
+		<title>DDwebsite</title>
 	</head>
 
 	<body onload="onloadFunktion()">
